<resources>
    <string name="app_name">Memory Balloons</string>
    <string name="welcome_to_memory_game">Welcome to Find Pair Game</string>
    <string name="start_game_10_cards">Start Game (x10)</string>
    <string name="start_game_20_cards">Start Game (x20)</string>
    <string name="start_game_32_cards">Start Game (x32)</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="exit">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_00">00:00</string>
    <string name="icon">icon</string>
    <string name="good_job">Good job!!! Results are saved to Leaderboard</string>
    <string name="seconds">46 sec</string>
    <string name="pattern">10 cards</string>
    <string name="date">22.04</string>
    <string name="mode">Mode</string>
    <string name="time">Time</string>
    <string name="date_header">Date</string>
    <string name="loading">Loading...</string>
    <string name="balloon_image">balloon image</string>
    <string name="start_game_x10_image_button">start game x10 image button</string>
    <string name="start_game_x20_image_button">start game x20 image button</string>
    <string name="start_game_x32_image_button">start game x32 image button</string>
    <string name="leaderboard_image_button">leaderboard image button</string>
    <string name="exit_image_button">exit image button</string>
    <string name="back_button">back button</string>
    <string name="pause_icon">Pause icon</string>
    <string name="mode_x10">Mode x%d)</string>
    <string name="timer_image">timer image</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_start_over_the_game">Do you want to start over the game?</string>
    <string name="game_over">Game Over</string>
</resources>