<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_start_over_the_game"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/yesButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/yes_ic"
            android:contentDescription="@string/yes" />

        <ImageView
            android:id="@+id/noButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/no_ic"
            android:contentDescription="@string/no" />
    </LinearLayout>
</LinearLayout>