<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/welcomeTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/welcome_to_memory_game"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startGame10Btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/start_game_10_cards"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/startGame20Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/startGame20Btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/start_game_20_cards"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/leaderboardBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGame10Btn"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/leaderboardBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/exitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGame20Btn"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboardBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>