<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/welcome_fragment_bg"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/startGame10Btn"
        android:contentDescription="@string/start_game_x10_image_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/game_x10_image_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <ImageButton
        android:id="@+id/startGame20Btn"
        android:contentDescription="@string/start_game_x20_image_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/game_x20_image_button"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/startGame10Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/startGame32Btn"
        android:contentDescription="@string/start_game_x32_image_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/game_x32_image_button"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/startGame20Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/leaderboardBtn"
        android:contentDescription="@string/leaderboard_image_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/leaderboard_image_button"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/startGame32Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/exitBtn"
        android:contentDescription="@string/exit_image_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/exit_image_button"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/leaderboardBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>