<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_bg"
    android:padding="16dp">


    <ImageView
        android:id="@+id/pauseIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/pause_icon"
        android:focusable="true"
        android:scaleType="centerInside"
        android:src="@drawable/pause_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timerIv" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:fontFamily="@font/baloobhai2_bold"
        android:text="@string/mode_x10"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/timerIv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/timerIv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/timer_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pauseIv"
        app:layout_constraintTop_toBottomOf="@+id/titleTv"
        app:srcCompat="@drawable/timer_icon" />

    <TextView
        android:id="@+id/timerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/baloobhai2_bold"
        android:padding="8dp"
        android:text="@string/time_00"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/timerIv"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/timerIv"
        app:layout_constraintTop_toTopOf="@+id/timerIv" />

</androidx.constraintlayout.widget.ConstraintLayout>