<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/patterTv"
            android:layout_width="0dp"
            android:fontFamily="@font/baloobhai2_regular"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/pattern"
            android:gravity="start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/timeTv"
            tools:textColor="@color/black"
            app:layout_constraintHorizontal_weight="1" />

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:fontFamily="@font/baloobhai2_regular"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/patterTv"
            app:layout_constraintEnd_toStartOf="@+id/dateTv"
            tools:textColor="@color/black"
            app:layout_constraintHorizontal_weight="1" />

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="0dp"
            android:fontFamily="@font/baloobhai2_regular"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/timeTv"
            app:layout_constraintEnd_toEndOf="parent"
            tools:textColor="@color/black"
            app:layout_constraintHorizontal_weight="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>